v0.2.0/_sources/config.md.txt
(configuration)=

# Configuration

`bibdeskparser` can be configured with a
[TOML](https://toml.io) file named `bibdeskparser.toml`. The file
replicates some of the preferences that the BibDesk application itself
offers -- most importantly, which entry types and fields are considered
valid (see [Bib Entry Types](bib-entry-types)).

## Where the file is found

When `bibdeskparser` is imported, and again whenever a
{class}`~bibdeskparser.Library` is constructed, it searches for a
`bibdeskparser.toml` in the following locations, in order of
precedence. **The first file found wins**; the others are ignored.

1. The path assigned to `Library.config.config_file` (see
   {class}`~bibdeskparser.Library` and below), if any. An explicit
   `config_file` that does not exist raises a {exc}`FileNotFoundError`.
2. The directory containing the `.bib` file that is being loaded (or
   the current working directory, for a library not loaded from a file
   -- and at import time).
3. The file named by the `$BIBDESKPARSER_CONFIG` environment variable,
   if the variable is set. A file that does not exist raises a
   {exc}`FileNotFoundError`. Setting the variable to an empty value
   disables the user-level configuration (this step and the next)
   entirely.
4. The XDG configuration directory:
   `$XDG_CONFIG_HOME/bibdeskparser/bibdeskparser.toml`, falling back to
   `~/.config/bibdeskparser/bibdeskparser.toml` when `$XDG_CONFIG_HOME`
   is unset. This location is only considered when
   `$BIBDESKPARSER_CONFIG` is unset.

The configuration is applied **process-wide**: it affects every
{class}`~bibdeskparser.Entry`, whether or not it belongs to a library.

## The `verify_types` and `verify_fields` flags

Two boolean options, both defaulting to `true`, control validation:

```toml
verify_types = true
verify_fields = true
```

* `verify_types`: when `true` (the default), constructing an entry with
  an unrecognized type, or assigning such a type, raises a
  {exc}`ValueError`. Set it to `false` to accept any entry type (still
  lowercased).
* `verify_fields`: when `true` (the default), assigning a field that is
  not appropriate for an entry's type emits a {exc}`UserWarning` (the
  value is stored regardless). Set it to `false` to suppress those
  warnings entirely.

The active configuration is exposed as the `config` class attribute
of {class}`~bibdeskparser.Library` (equally readable from any library
instance, as `bib.config`), so every setting can also be changed from
Python, without a configuration file:

```python
>>> from bibdeskparser import Library
>>> Library.config.verify_types
True
>>> Library.config.verify_types = False   # accept any entry type
>>> Library.config.verify_types = True    # restore the default
>>> Library.config.verify_types
True

```

Assigning to a `Library.config` attribute overrides the value for the
current process only; it never writes back to the
`bibdeskparser.toml` file. Note that constructing a `Library`
re-applies whichever configuration file is discovered, which replaces
such overrides; set the attributes *after* constructing a library, or
point `Library.config.config_file` (default `None`) at a file to force
that file to be used, ahead of directory-based discovery.

## The `default_bib_file` option

A string option, unset by default, naming the `.bib` file that the
{ref}`command-line interface <cli>` operates on when no `BIBFILE`
argument is given:

```toml
default_bib_file = "$HOME/Documents/library.bib"
```

Environment variables (`$VAR`) and a leading `~` in the value are
expanded. The option has no effect on the Python API.

(config-auto-key)=

## The `[auto_key]` table: autogenerated citation keys

The `[auto_key]` table configures the automatic generation of
citation keys by single-argument
{py:meth}`~bibdeskparser.Library.rekey` (and the
{ref}`rekey CLI command <cli-rekey>` without a `NEW_KEY`):

```toml
[auto_key]
format_spec = "%a1%c{journal}0%Y%u0"
lowercase = false   # lowercase the whole generated key
clean = "tex"       # TeX cleanup: "none", "braces", or "tex"
```

* `format_spec` (required within the table): the key format, in
  BibDesk's [format-specifier language](format-specifiers). Each
  format is validated when the configuration is loaded. Without an
  `[auto_key]` table, generating a key requires an explicit
  `format_spec` pattern. It may also be a
  [per-type mapping](config-auto-key-per-type).
* `lowercase` (default `false`): lowercase the entire generated key,
  like BibDesk's *Generate lowercase* option.
* `clean` (default `"tex"`): how much TeX markup to strip from field
  values, like BibDesk's *Remove TeX* options: `"tex"` removes TeX
  commands and braces, `"braces"` only braces, `"none"` neither.

The table is exposed as `Library.config.auto_key` (see
{class}`~bibdeskparser.Library`), with `format_spec`, `lowercase`, and
`clean` attributes; assigning `format_spec` validates every format
string in it.

(config-auto-key-per-type)=

### Per-type formats

The venue of a publication lives in a different field per entry type —
`journal` for an `@article`, `booktitle` for an `@inproceedings`,
`series` for a `@book` — so a single format is rarely right for a
mixed library. Instead of a plain string, `format_spec` may be a
**table** mapping each entry type to its own format. The empty-string
key `""` is the fallback for types not listed:

```toml
[auto_key.format_spec]
"" = "%a1%Y%u0"                        # fallback for any other type
article = "%a1%c{journal}0%Y%u0"
inproceedings = "%a1%c{booktitle}0%Y%u0"
incollection = "%a1%c{booktitle}0%Y%u0"
book = "%a1%c{series}0%Y%u0"
```

The entry's own type selects the format; generating a key for a type
that is neither listed nor covered by a `""` fallback is an error.
(`lowercase` and `clean` still apply uniformly to every type.)

(config-auto-file)=

## The `[auto_file]` table: autogenerated attachment file names

The `[auto_file]` table configures the automatic filing of attached
files (BibDesk's *AutoFile* feature): moving them into a designated
location and renaming them according to a
[file-name format](specifiers-files). It is used by
{py:meth}`~bibdeskparser.Library.rename_file` without a
`new_filename`, by {py:meth}`~bibdeskparser.Library.add_file` when
auto-filing, and by the corresponding
{ref}`CLI commands <cli>` (see the
[how-to guide](howto-auto-file)):

```toml
[auto_file]
format_spec = "%f{Cite Key}%u0%e"
location = "."             # directory files are moved into
lowercase = false          # lowercase the whole generated name
clean = "tex"              # TeX cleanup: "none", "braces", or "tex"
file_automatically = false # auto-file on add_file by default
```

* `format_spec` (required within the table): the file-name format, in
  the [file-name dialect](specifiers-files) of BibDesk's
  format-specifier language; it must contain a unique specifier
  (`%u`/`%U`/`%n`). Each format is validated when the configuration
  is loaded. Without an `[auto_file]` table, generating a file name
  requires an explicit `format_spec` pattern. Like the `[auto_key]`
  format, it may be a [per-type mapping](config-auto-key-per-type).
  The recommended format is `%f{Cite Key}%u0%e`, which names each
  attachment after its entry's citation key while preserving the
  file's real extension.
* `location` (default `"."`): the directory that auto-filed
  attachments are moved into -- BibDesk's *Papers Folder*. A relative
  path is interpreted against the directory containing the `.bib`
  file (so the default files attachments next to the library, like
  BibDesk with an empty Papers Folder preference); an absolute path
  names a fixed folder. Environment variables (`$VAR`) and a leading
  `~` are expanded. Missing directories are created as needed.
* `lowercase` (default `false`): lowercase the entire generated file
  name.
* `clean` (default `"tex"`): how much TeX markup to strip from field
  values: `"tex"` removes TeX commands and braces, `"braces"` only
  braces, `"none"` neither.
* `file_automatically` (default `false`): when `true`,
  {py:meth}`~bibdeskparser.Library.add_file` auto-files every newly
  attached file by default, the equivalent of BibDesk's *File papers
  into the papers folder automatically* preference. Regardless of
  this setting, on-demand filing -- `rename_file` without a new name,
  `add_file` with an explicit `format_spec`/`auto_file_location`, and
  previews via `eval_format_spec` -- is available whenever the table
  is present.

The table is exposed as `Library.config.auto_file` (see
{class}`~bibdeskparser.Library`), with `format_spec`, `location`,
`lowercase`, `clean`, and `file_automatically` attributes; assigning
`format_spec` or `location` validates the value.

## The `[initials]` table: acronym exceptions

The `[initials]` table defines, per field, exceptions to the acronym
that the `%c` format specifier builds from a field value (see
[Venue initials](specifiers-initials)). Keys are full field values
or `@string` macro names:

```toml
[initials.journal]
"npj Quantum Inf" = "NPJQI"
"SIAM Rev." = "SR"

[initials.booktitle]           # for %c{booktitle} on conference papers
"Proc. SPIE 11700, Optical and Quantum Sensing" = "SPIE"
```

With per-type formats, supply an `[initials.<field>]` table for each
venue field your formats reference (`[initials.booktitle]`,
`[initials.series]`, ...) alongside `[initials.journal]`.

## Custom and extended entry types

A `[types.NAME]` table defines the mandatory (`required`) and optional
(`optional`) fields of an entry type, exactly like BibDesk's
per-type field templates. This both makes `NAME` a recognized entry
type and, when `verify_fields` is on, determines which fields are
considered appropriate for it.

For an entry type that is **not** already built in, the table simply
defines it:

```toml
[types.dataset]
required = ["author", "title", "year"]
optional = ["note", "url"]
```

For a type that **is** built in, the fields you list are *added* to the
built-in template by default:

```toml
[types.article]
optional = ["eprint"]   # article keeps its built-in fields, plus eprint
```

To discard the built-in template and define the type from scratch, set
`replace = true`:

```toml
[types.report]
replace = true
required = ["author", "title", "year"]
optional = ["note"]
```

## Custom fields

A `[fields]` table adds recognized field names without tying them to a
particular type:

```toml
[fields]
# accepted on every entry type, like keywords or note
universal = ["mycustomtag"]
# recognized, but not treated as universal
known = ["someotherfield"]
```

A `universal` field never triggers the inappropriate-field warning,
whatever the entry type. A `known` field is recognized for entry types
that have no field template of their own, but is not automatically
appropriate for a templated type.

## A complete example

```toml
# bibdeskparser.toml
verify_types = true
verify_fields = true

[auto_key.format_spec]       # autogenerated citation keys, per type
"" = "%a1%Y%u0"              # fallback for any other type
article = "%a1%c{journal}0%Y%u0"
inproceedings = "%a1%c{booktitle}0%Y%u0"
incollection = "%a1%c{booktitle}0%Y%u0"
book = "%a1%c{series}0%Y%u0"

[auto_file]                  # autogenerated attachment file names
format_spec = "%f{Cite Key}%u0%e"
location = "."             # directory files are moved into
lowercase = false          # lowercase the whole generated name
clean = "tex"              # TeX cleanup: "none", "braces", or "tex"
file_automatically = true  # auto-file on add_file by default

[initials.journal]                   # acronym exceptions for %c{journal}
"npj Quantum Inf" = "NPJQI"          # would otherwise acronym to "NQI"
"IEEE Trans. on Appl. Superc." = "ITAS"  # would keep "on" → "ITOAS"

[initials.booktitle]         # exceptions for conference proceedings
"Proc. SPIE 11700, Optical and Quantum Sensing and Precision Metrology" = "SPIE"

[types.dataset]              # a new entry type
required = ["author", "title", "year"]
optional = ["note", "url"]

[types.article]              # extend a built-in type
optional = ["eprint", "eprinttype"]

[fields]
universal = ["mytag"]
```

With this configuration, an `@article` in *Phys. Rev. A* is keyed
`Goerz2014` → `GoerzPRA2014`. The `PRA` comes straight from
`%c{journal}0`, which acronyms every word of the venue, so no
`[initials.journal]` entry is needed for it (the recommended pattern;
see [venue initials](specifiers-initials)). By contrast, an
`@inproceedings` in the SPIE proceedings above becomes `GoerzSPIE2021`:
that long `booktitle` acronyms to an unhelpful jumble of letters and
volume digits, so `[initials.booktitle]` pins it to `SPIE`. A `@misc`
entry, matching no listed type, falls back to `%a1%Y%u0`. Attached
files can be filed on demand into `~/Documents/Papers`, named after
their entry's citation key (e.g. `GoerzPRA2014.pdf`); with
`file_automatically = true` in `[auto_file]`, every newly attached
file would be filed that way immediately.
